--- a/src/html/goodsinfo.html
+++ b/src/html/goodsinfo.html
@@ -14,7 +14,7 @@
 		<div class="w">
 			<div class="breadcrumb">
 				<strong><a href="">全部</a></strong>
-				<p>&nbsp;>&nbsp;<a href="">白酒</a>&nbsp;>&nbsp;<a href="">汾酒</a>&nbsp;>&nbsp;<a href="">52°汾酒集团清典荣耀 850ml（2瓶装）</a>
+				<p>&nbsp;>&nbsp;<a href="">白酒</a>&nbsp;>&nbsp;<a href="">汾酒</a>&nbsp;>&nbsp;<a href="" class="title">52°汾酒集团清典荣耀 850ml（2瓶装）</a>
 				</p>
 			</div>
 			<div class="goods">
@@ -23,9 +23,9 @@
 			<div class="product-intro">
 				<div class="goodsName">
 					<h1>52°汾酒集团清典荣耀 850ml（2瓶装）</h1>
-					<strong>荣耀时刻，就要与朋友尽情畅饮！</strong>
+					<strong id="other">荣耀时刻，就要与朋友尽情畅饮！</strong>
 					<div class="pricinfo"><b>价格</b>&nbsp;&nbsp;&nbsp;<i>¥&nbsp;</i><i class="price">198</i><a>48小时内发货</a></div>
-					<div class="sale"><i>销量</i><a>766套</a><i>评价</i><a>410</a><i>评分</i></div>
+					<div class="sale"><i>销量</i><a id="saleout">766套</a><i>评价</i><a id="discuss">410</a><i id="pingfen">评分</i></div>
 					<div class="have"><i>存库</i><a >有货</a></div>
 					<div class="count"><i>数量</i><input type="button" value="-" id="jian"><input type="text" value="1" id="number"><input type="button" value="+" id="jia"></div>
 					<div id=btnBuy><a>立即购买</a></div>
