更新购物车功能

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -75,8 +75,8 @@
 			<li><a href="">订购热线：400-798-9999</a></li>
 		</ul>
 		<ul class="logAndReg" style="display:none">
-			<li><a href="html/login.html">请登录</a></li>
-			<li><a href="html/regist.html">免费注册</a></li>
+			<li><a href="./login.html">请登录</a></li>
+			<li><a href="./regist.html">免费注册</a></li>
 		</ul>
 		<ul class="info">
 			<li><a href="#" id="userAc"></a></li>
@@ -122,7 +122,7 @@
 			</div>
 			<div class="car-btn">
 				<div class="car-total">
-					<p class="total-sel">已选<i class="total-num">0</i>件</p><p class="total-price">¥<i>0</i></p>
+					<p class="total-sel">已选<i class="total-num">0</i>件</p><p class="total-price">¥<i class="tal-price">0</i></p>
 				</div>
 				<input type="button" class="btn-submit" value="购物车结算">
 			</div>
