--- a/src/html/login.html
+++ b/src/html/login.html
@@ -29,8 +29,8 @@
 			</section>	
 			<div class="from">
 				<p><i></i><span id="errTip">公共场所不建议自动登录，以防账号丢失</span></p>
-				<div class="ac_area"><div class="ac_ico"></div><input type="text" class="ac"></div>
-				<div class="pw_area"><div class="pw_ico"></div><input type="password" class="pw"></div>
+				<div class="ac_area"><div class="ac_ico"></div><input type="text" class="ac" placeholder="请输入手机号"></div>
+				<div class="pw_area"><div class="pw_ico"></div><input type="password" class="pw" placeholder="请输入密码"></div>
 				<div class="reAndFo"><label for=""><input type="checkbox" class="checkbox">自动登录</label><a href="forgetpw.html" class="forget">忘记密码</a></div>
 				<input type="button" value="登录" class="btnLog">
 			</div>		
