--- a/src/html/regist.html
+++ b/src/html/regist.html
@@ -32,10 +32,10 @@
 				<span class="phone"><i>*</i>手机号码：</span><div class="inpAcBg"><input type="text" id="ac"><i></i></div>
 			</div>
 			<div class="phoneAc">
-				<span><i>*</i>请设置密码：</span><div class="inpAcBg"><input type="text" id="pw"><i></i></div>
+				<span><i>*</i>请设置密码：</span><div class="inpAcBg"><input type="password" id="pw"><i></i></div> 
 			</div>
 			<div class="phoneAc">
-				<span><i>*</i>请确认密码：</span><div class="inpAcBg"><input type="text" id="spw"><i></i></div>
+				<span><i>*</i>请确认密码：</span><div class="inpAcBg"><input type="password" id="spw"><i></i></div>
 			</div>
 			<input type="button" value="注册" class="btnReg">
 		</form>
